--- a/assets/html/lender_template.html
+++ b/assets/html/lender_template.html
@@ -135,7 +135,7 @@
     <div class="email-container">
         <div class="header">
             <!-- Replace with your actual logo URL -->
-            <img src="./favicon.ico" alt="{{ company_name|default('Your Company') }} Logo" class="logo">
+            <img src="https://ibb.co/sd2dkfBv" alt="{{ company_name|default('Your Company') }} Logo" class="logo">
             <h2>Borrow Request Notification</h2>
         </div>
         
@@ -170,7 +170,7 @@
                 </tr>
                 <tr>
                     <th>Borrow Request Submitted</th>
-                    <td>{{ submission_date|date_format }}</td>
+                    <td>{{ submission_date }}</td>
                 </tr>
                 <tr>
                     <th>Status</th>
