--- a/assets/html/lender_template.html
+++ b/assets/html/lender_template.html
@@ -135,7 +135,7 @@
     <div class="email-container">
         <div class="header">
             <!-- Replace with your actual logo URL -->
-            <img src="https://ibb.co/sd2dkfBv" alt="{{ company_name|default('Your Company') }} Logo" class="logo">
+            <img src="https://i.ibb.co/wFRF3kvN/SE-Library-Logo.png" alt="{{ company_name|default('Your Company') }} Logo" class="logo">
             <h2>Borrow Request Notification</h2>
         </div>
         
