feat: approved for lender action button

--- a/assets/html/lender_template.html
+++ b/assets/html/lender_template.html
@@ -178,7 +178,7 @@
                 </tr>
             </table>
             
-            {% if borrowing_request %}
+            {% if borrow_request %}
             <p>Please review this request at your earliest convenience. You can access the full details and respond to this request by clicking the button below:</p>
             
             <a href="{{ action_url }}" class="button">Approve The Request</a>
