feat: successfully implement qrcode in email

--- a/assets/html/borrower_template.html
+++ b/assets/html/borrower_template.html
@@ -218,7 +218,12 @@
                     Please use below QRCode to scan at the smart locker id: {{
                     locker_id }}
                 </h2>
-                <img src="{{ qr_image }}" alt="QRCODE" />
+                <img
+                    src="{{ qr_image }}"
+                    alt="QRCODE"
+                    width="350"
+                    height="350"
+                />
 
                 <p>
                     When you already have returned the book inside the locker,
