--- a/assets/html/borrower_template.html
+++ b/assets/html/borrower_template.html
@@ -170,7 +170,7 @@
                 {% elif pick_up %}
                 <p>
                     We are writing to inform you that your requested book is
-                    ready to pick-up.
+                    ready for pick-up.
                 </p>
                 {% endif %}
 
@@ -215,7 +215,7 @@
 
                 {% if pick_up %}
                 <h2>
-                    Please use below QRCode to scan at the smart locker id: {{
+                    Please use the QRCode below to scan at the smart locker id: {{
                     locker_id }}
                 </h2>
                 <img
@@ -226,7 +226,7 @@
                 />
 
                 <p>
-                    When you already have returned the book inside the locker,
+                    When you have finished returning the book to the locker,
                     please let us know by clicking below button:
                 </p>
 
@@ -250,7 +250,7 @@
                 </p>
 
                 <p style="margin-top: 15px; font-size: 11px">
-                    You're receiving this email because you're registered as a
+                    You are receiving this email because you have registered as a
                     lender on our platform.
                     <br />
                 </p>
